added code to get gps working

--- a/GPSTest/platformio.ini
+++ b/GPSTest/platformio.ini
@@ -14,6 +14,6 @@ board = heltec_wifi_lora_32_V3
 monitor_speed = 115200
 framework = arduino
 lib_deps = 
-    RadioLib
     TinyGPSPlus
+    EspSoftwareSerial
 build_flags = -I lib
